// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SyncWaterfallHook > call multi empty 1`] = `
[
  "hook-3",
  [
    [
      "hooks",
    ],
    [
      "hook-1",
    ],
    [
      null,
    ],
  ],
]
`;

exports[`SyncWaterfallHook > call multi empty 2`] = `
[
  "hook-3",
  [
    [
      "hooks",
    ],
    [
      "hook-1",
    ],
    [
      null,
    ],
  ],
]
`;

exports[`SyncWaterfallHook > call multi empty 3`] = `"hook-3"`;

exports[`SyncWaterfallHook > call multi empty 4`] = `"hook-3"`;

exports[`SyncWaterfallHook > call multi empty 5`] = `
[
  [
    "hooks",
  ],
  [
    "hook-1",
  ],
  [
    null,
  ],
]
`;

exports[`SyncWaterfallHook > call multi empty 6`] = `
[
  [
    "hooks",
  ],
  [
    "hook-1",
  ],
  [
    null,
  ],
]
`;

exports[`SyncWaterfallHook > call multi one array params 1`] = `"hook-3"`;

exports[`SyncWaterfallHook > call multi one array params 2`] = `"hook-3"`;

exports[`SyncWaterfallHook > call multi one array params 3`] = `
[
  [
    [
      "hooks",
    ],
  ],
  [
    "hook-1",
  ],
  [
    "hook-2",
  ],
]
`;

exports[`SyncWaterfallHook > call multi one array params 4`] = `
[
  [
    [
      "hooks",
    ],
  ],
  [
    "hook-1",
  ],
  [
    "hook-2",
  ],
]
`;

exports[`SyncWaterfallHook > call multi one params 1`] = `"hook-3"`;

exports[`SyncWaterfallHook > call multi one params 2`] = `"hook-3"`;

exports[`SyncWaterfallHook > call multi one params 3`] = `
[
  [
    "hooks",
  ],
  [
    "hook-1",
  ],
  [
    "hook-2",
  ],
]
`;

exports[`SyncWaterfallHook > call multi one params 4`] = `
[
  [
    "hooks",
  ],
  [
    "hook-1",
  ],
  [
    "hook-2",
  ],
]
`;

exports[`SyncWaterfallHook > call multi two array params 1`] = `"hook-3"`;

exports[`SyncWaterfallHook > call multi two array params 2`] = `"hook-3"`;

exports[`SyncWaterfallHook > call multi two array params 3`] = `
[
  [
    [
      "hooks",
    ],
    [
      0,
    ],
  ],
  [
    "hook-1",
    [
      0,
    ],
  ],
  [
    "hook-2",
    [
      0,
    ],
  ],
]
`;

exports[`SyncWaterfallHook > call multi two array params 4`] = `
[
  [
    [
      "hooks",
    ],
    [
      0,
    ],
  ],
  [
    "hook-1",
    [
      0,
    ],
  ],
  [
    "hook-2",
    [
      0,
    ],
  ],
]
`;

exports[`SyncWaterfallHook > call multi two params 1`] = `"hook-3"`;

exports[`SyncWaterfallHook > call multi two params 2`] = `"hook-3"`;

exports[`SyncWaterfallHook > call multi two params 3`] = `
[
  [
    "hooks",
    0,
  ],
  [
    "hook-1",
    0,
  ],
  [
    "hook-2",
    0,
  ],
]
`;

exports[`SyncWaterfallHook > call multi two params 4`] = `
[
  [
    "hooks",
    0,
  ],
  [
    "hook-1",
    0,
  ],
  [
    "hook-2",
    0,
  ],
]
`;
